--- a/client/src/Components/style.css
+++ b/client/src/Components/style.css
@@ -118,16 +118,15 @@
 
 /* Sidebar Item Styling */
 .sidebar-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80px;  /* Decreased width */
-  height: 80px; /* Decreased height */
-  border-radius: 15px;
-  background: linear-gradient(to bottom right, #6a5acd, #8a2be2); /* Gradient background */
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  animation: scrollUp 5s linear infinite; /* Apply scrolling animation to sidebar items */
+  @apply flex flex-col items-center justify-center w-20 h-20 rounded-lg border border-gray-300 bg-gradient-to-br from-[#eeedf2] to-[#ebdcfa] transition-transform duration-300 ease-in-out hover:scale-105 hover:shadow-lg;
+}
+
+.upload-btn {
+  @apply flex items-center justify-center w-20 h-20 bg-gray-200 bg-opacity-40 backdrop-blur-md rounded-xl hover:scale-105 hover:shadow-lg transition-all duration-300 ease-in-out cursor-pointer;
+}
+
+.upload-btn span {
+  @apply text-sm font-semibold text-gray-700;
 }
 
 /* Sidebar Scroll Animation */
@@ -160,10 +159,10 @@
 
 /* Other styling adjustments for navbar and sidebar items */
 
-/* Hover Effects */
+
+/* Hover and active states */
 .sidebar-item:hover {
-  transform: translateY(-5px) scale(1.1);
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+  @apply transform translate-y-1 shadow-xl;
 }
 
 /* Icon Animation */
@@ -183,10 +182,7 @@
 
 /* Text Styling */
 .sidebar-item div {
-  color: white; /* White text */
-  font-weight: bold;
-  text-align: center;
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Subtle text shadow */
+  @apply text-white font-semibold text-xs text-center mt-2 text-shadow-md;
 }
 
 /* Responsive Adjustments */
